[gd_scene load_steps=43 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://player/eff_sloweffect.png" type="Texture" id=2]
[ext_resource path="res://player/p0/option.tres" type="Texture" id=3]
[ext_resource path="res://playerHurt.wav" type="AudioStream" id=4]
[ext_resource path="res://se/graze.wav" type="AudioStream" id=5]
[ext_resource path="res://bullet/add.tres" type="Material" id=6]
[ext_resource path="res://DeathEffect.tscn" type="PackedScene" id=7]
[ext_resource path="res://funnyobscure.png" type="Texture" id=8]
[ext_resource path="res://se/item.wav" type="AudioStream" id=9]
[ext_resource path="res://se/se_extend.wav" type="AudioStream" id=10]
[ext_resource path="res://se/se_cardget.wav" type="AudioStream" id=11]
[ext_resource path="res://se/se_powerup.wav" type="AudioStream" id=12]
[ext_resource path="res://se/spark.wav" type="AudioStream" id=13]
[ext_resource path="res://effect/eff_deadcircle.png" type="Texture" id=14]
[ext_resource path="res://player/particle.png" type="Texture" id=15]
[ext_resource path="res://effect/unusual/cosmicflame.tscn" type="PackedScene" id=16]
[ext_resource path="res://effect/unusual/money.tscn" type="PackedScene" id=17]
[ext_resource path="res://player/p0/pl.png" type="Texture" id=18]
[ext_resource path="res://effect/unusual/thundercloud.tscn" type="PackedScene" id=19]
[ext_resource path="res://effect/unusual/greenflame.tscn" type="PackedScene" id=20]
[ext_resource path="res://effect/unusual/blueflame.tscn" type="PackedScene" id=21]
[ext_resource path="res://effect/unusual/redflame.tscn" type="PackedScene" id=22]
[ext_resource path="res://effect/unusual/eyestorm.tscn" type="PackedScene" id=23]
[ext_resource path="res://effect/unusual/raincloud.tscn" type="PackedScene" id=24]
[ext_resource path="res://effect/unusual/iciclebowl.tscn" type="PackedScene" id=25]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec3 colour;
uniform float rate;
uniform float frame;
uniform float direction;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float r = rate * 0.5;
	float four = 4.0;
	float change = max(0.0, 1.0 - abs((mod(TIME*0.5, r) - direction * (UV.x - 0.25 * mod(frame, four)) * 0.25) - (UV.y - 0.375 * floor(frame / 4.0)))*24.0);
	COLOR.rgb += 0.75*colour * change;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/colour = Vector3( 0, 1, 0.5 )
shader_param/rate = 2.0
shader_param/frame = 0.0
shader_param/direction = 1.0

[sub_resource type="Animation" id=3]
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("focus:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("focus2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("focus:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.025 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("focus2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("focus:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.1, 0, 0, 0.05, 0, 2, -0.075, 0, 0.05, 0, 1.25, -0.025, -1, 0.0197574, 0.597892 ),
"times": PoolRealArray( 0, 0.13, 0.25 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("focus:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0.1, 0, 0, 0.05, 0, 2, -0.075, 0, 0.05, 0, 1.25, -0.025, -1, 0.125, 0 ),
"times": PoolRealArray( 0, 0.13, 0.25 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("focus2:scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.5, 0, 0, 0.05, 0, 1.25, -0.05, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.13 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("focus2:scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.5, 0, 0, 0.05, 0, 1.25, -0.05, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.13 )
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00328947, 0.835526, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.0214067, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
width = 360
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_size_modifier = SubResource( 7 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 480.0
initial_velocity_random = 0.27
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 16.0
angle = 720.0
angle_random = 1.0
scale = 8.0
scale_random = 0.15
color_ramp = SubResource( 5 )

[sub_resource type="AtlasTexture" id=9]
flags = 5
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=10]
flags = 5
atlas = ExtResource( 14 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="Animation" id=11]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/deathcircle:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/deathcircle2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -240.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/deathcircle:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/deathcircle2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -240.0 ]
}

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color = Color( 0.356863, 0.572549, 1, 1 )

[sub_resource type="Animation" id=14]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.521739, 0.996377, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1200.0
initial_velocity_random = 0.75
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.1
scale_random = 0.5
color_ramp = SubResource( 16 )

[node name="player" type="Node2D"]
script = ExtResource( 1 )
pid = 1

[node name="focus2" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
z_index = 32
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="focus" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
z_index = 32
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 18 )
hframes = 4
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 512, 384 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -20.0

[node name="focusanimation" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/focus = SubResource( 3 )

[node name="Graze" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="GrazeParticles" type="Particles2D" parent="."]
visible = false
material = ExtResource( 6 )
amount = 360
lifetime = 0.2
local_coords = false
process_material = SubResource( 8 )

[node name="unusuals" type="Node2D" parent="."]
z_index = -1

[node name="money" parent="unusuals" instance=ExtResource( 17 )]
visible = false

[node name="cosmicflame" parent="unusuals" instance=ExtResource( 16 )]
visible = false

[node name="redflame" parent="unusuals" instance=ExtResource( 22 )]
visible = false

[node name="blueflame" parent="unusuals" instance=ExtResource( 21 )]
visible = false

[node name="greenflame" parent="unusuals" instance=ExtResource( 20 )]
visible = false

[node name="eyestorm" parent="unusuals" instance=ExtResource( 23 )]
visible = false

[node name="thundercloud" parent="unusuals" instance=ExtResource( 19 )]
visible = false
z_index = 2

[node name="raincloud" parent="unusuals" instance=ExtResource( 24 )]
visible = false

[node name="iciclebowl" parent="unusuals" instance=ExtResource( 25 )]
visible = false

[node name="options" type="Node2D" parent="."]
z_index = 1

[node name="option0" type="Sprite" parent="options"]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 384, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="option1" type="Sprite" parent="options"]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 384, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="option2" type="Sprite" parent="options"]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 384, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="option3" type="Sprite" parent="options"]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 384, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="deathcircle" type="Node2D" parent="."]
rotation = 2.77507
scale = Vector2( 1e-05, 1e-05 )
z_index = 10

[node name="Node2D" type="Node2D" parent="deathcircle"]
scale = Vector2( 0.333, 1.25 )

[node name="deathcircle" type="Sprite" parent="deathcircle/Node2D"]
material = ExtResource( 6 )
texture = SubResource( 9 )

[node name="Node2D2" type="Node2D" parent="deathcircle"]
rotation = 1.74533
scale = Vector2( 0.5, 1 )

[node name="deathcircle2" type="Sprite" parent="deathcircle/Node2D2"]
material = ExtResource( 6 )
scale = Vector2( -1, 1 )
texture = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="deathcircle"]
anims/death1 = SubResource( 11 )
anims/death2 = SubResource( 12 )

[node name="bombtemp" type="Particles2D" parent="."]
material = ExtResource( 6 )
position = Vector2( 0, -128 )
z_index = 9
emitting = false
amount = 256
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bombtemp"]
"anims/New Anim" = SubResource( 14 )

[node name="DeathEffect" parent="." instance=ExtResource( 7 )]
z_index = 10

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
z_index = 10
texture = ExtResource( 8 )

[node name="blood" type="Particles2D" parent="."]
emitting = false
amount = 900
lifetime = 2.0
one_shot = true
explosiveness = 0.9
process_material = SubResource( 17 )

[node name="deathparticles" type="Particles2D" parent="."]
material = ExtResource( 6 )
emitting = false
amount = 192
lifetime = 0.5
one_shot = true
explosiveness = 0.75
process_material = SubResource( 17 )
texture = ExtResource( 15 )

[node name="bomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0

[node name="item" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="extend" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="spellextend" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="powerup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="Node2D" type="Node2D" parent="."]
